Add Kafka configuration and delivery management; refactor entity names and properties